--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 		<div id="container">
 			<div class="screen">
-				<div id="root"></div>
+				<div id="root" class="crt"></div>
 			</div>
 		</div>
 	</body>
