--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 			work correctly both with client-side routing and a non-root public URL.
 			Learn how to configure a non-root public URL by running `npm run build`.
 		-->
-		<title>emudevz</title>
+		<title>consoletest</title>
 	</head>
 	<body style="display: none">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
