Fixing font update glitch

--- a/public/index.html
+++ b/public/index.html
@@ -32,5 +32,8 @@
 				<div id="root" class="crt"></div>
 			</div>
 		</div>
+
+		<div>&nbsp;</div>
+		<!-- (force browser to download the default font) -->
 	</body>
 </html>
