--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 	</head>
 	<body style="display: none">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<script src="%PUBLIC_URL%/xterm-addon-image.js"></script>
 
 		<div id="container">
 			<div class="screen">
