--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
 
 		<div id="container">
 			<div class="screen">
-				<div id="root" class="crt"></div>
+				<div id="root" class=""></div>
+				<!-- // TODO: class="crt" -->
 			</div>
 		</div>
 
