Adding emojis and spanish copy

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 		<div id="container">
 			<div class="screen">
 				<div id="root" class=""></div>
-				<!-- // TODO: class="crt" -->
+				<!-- // FIXME: class="crt" -->
 			</div>
 		</div>
 
