Adding timestamps to level history

--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,11 @@
 
 		<div id="container">
 			<div class="screen">
-				<div id="root" class=""></div>
-				<!-- // FIXME: class="crt" -->
+				<div id="root" class="crt"></div>
 			</div>
 		</div>
 
 		<div>&nbsp;</div>
-		<!-- (force browser to download the default font) -->
+		<!-- // HACK: force browser to download the default font -->
 	</body>
 </html>
