--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			Learn how to configure a non-root public URL by running `npm run build`.
 		-->
 		<title>EmuDevz</title>
+		<script type="module" src="src/index"></script>
 	</head>
 	<body style="display: none">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
