--- a/index.html
+++ b/index.html
@@ -2,31 +2,21 @@
 <html lang="en" style="background: black">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="shortcut icon" href="favicon.ico" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
 		<meta name="theme-color" content="#000000" />
-		<link href="%PUBLIC_URL%/fonts/css.css" rel="stylesheet" />
-
-		<!--
-			Notice the use of %PUBLIC_URL% in the tags above.
-			It will be replaced with the URL of the `public` folder during the build.
-			Only files inside the `public` folder can be referenced from the HTML.
-
-			Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-			work correctly both with client-side routing and a non-root public URL.
-			Learn how to configure a non-root public URL by running `npm run build`.
-		-->
+		<link href="fonts/css.css" rel="stylesheet" />
 		<title>EmuDevz</title>
 		<script type="module" src="src/index"></script>
 	</head>
 	<body style="display: none">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<script src="%PUBLIC_URL%/imgui.umd.js"></script>
-		<script src="%PUBLIC_URL%/imgui_impl.umd.js"></script>
-		<script src="%PUBLIC_URL%/imgui_memory_editor.umd.js"></script>
+		<script src="imgui.umd.js"></script>
+		<script src="imgui_impl.umd.js"></script>
+		<script src="imgui_memory_editor.umd.js"></script>
 
 		<div id="container">
 			<div class="screen">
