REVERT: xterm to 5.2.0 (undo this commit if they fix https://github.com/xtermjs/xterm.js/issues/5394)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	</head>
 	<body style="display: none">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<script src="xterm-addon-image.js"></script>
 		<script src="imgui.umd.js"></script>
 		<script src="imgui_impl.umd.js"></script>
 		<script src="imgui_memory_editor.umd.js"></script>
