Adding toggable CRT filter

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<div id="container">
 			<div class="screen">
-				<div id="root" class=""></div>
+				<div id="root" class="crt"></div>
 				<!-- class="crt" -->
 			</div>
 		</div>
