--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 		<meta name="theme-color" content="#000000" />
 		<link href="fonts/css.css" rel="stylesheet" />
 		<title>EmuDevz</title>
+		<meta
+			name="description"
+			content="EmuDevz: A game about making emulators!"
+		/>
 		<script type="module" src="src/index"></script>
 	</head>
 	<body style="display: none">
