Adding OpenGraph tags

--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
 		<meta name="theme-color" content="#000000" />
 		<link href="fonts/css.css" rel="stylesheet" />
 		<title>EmuDevz</title>
+
 		<meta
 			name="description"
 			content="EmuDevz: A game about making emulators!"
 		/>
+		<meta property="og:title" content="EmuDevz" />
+		<meta property="og:description" content="A game about making emulators!" />
+		<meta
+			property="og:image"
+			content="https://afska.github.io/emudevz/assets/logo.png"
+		/>
+		<meta property="og:url" content="https://afska.github.io/emudevz" />
+		<meta property="og:type" content="website" />
+
 		<script type="module" src="src/index"></script>
 	</head>
 	<body style="display: none">
