Improving 'too small overlay'

--- a/index.html
+++ b/index.html
@@ -42,5 +42,14 @@
 
 		<div>&nbsp;</div>
 		<!-- // HACK: force browser to download the default font -->
+
+		<div id="too-small-overlay">
+			<div class="too-small-overlay__content">
+				❌ Window too small!
+				<div class="too-small-overlay__subtitle">
+					This is a desktop-only experience!
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
